Fleshed out base and ntp modules. Added puppet module.

--- a/ntp/templates/ntp.conf.erb
+++ b/ntp/templates/ntp.conf.erb
@@ -19,9 +19,11 @@ restrict -6 ::1
 
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
-server ntp1.service.ohio-state.edu
-server ntp2.service.ohio-state.edu
-server 0.rhel.pool.ntp.org
+
+# Managed by puppet class { "ntp": servers => [ ... ] }
+<% [servers].flatten.each do |server| -%>
+server <%= server %>
+<% end -%>
 
 #broadcast 192.168.1.255 autokey        # broadcast server
 #broadcastclient                        # broadcast client
