Added ssh module and added puppet warning to managed files.

--- a/ntp/templates/ntp.conf.erb
+++ b/ntp/templates/ntp.conf.erb
@@ -1,3 +1,7 @@
+###  THIS FILE IS MANAGED BY PUPPET!
+###  Manual changes will be overwritten.
+###  See modules/ntp/templates/ntp.conf.erb
+
 # For more information about this file, see the man pages
 # ntp.conf(5), ntp_acc(5), ntp_auth(5), ntp_clock(5), ntp_misc(5), ntp_mon(5).
 
