--- a/puppet/templates/puppet.conf.erb
+++ b/puppet/templates/puppet.conf.erb
@@ -1,3 +1,7 @@
+###  THIS FILE IS MANAGED BY PUPPET!
+###  Manual changes will be overwritten.
+###  See modules/puppet/templates/puppet.conf.erb
+
 [main]
     user = puppet
     group = puppet
