Cleaned up MySQL module and added tests

--- a/mysql/templates/my.cnf.erb
+++ b/mysql/templates/my.cnf.erb
@@ -1,4 +1,6 @@
-### Managed by Puppet
+###  THIS FILE IS MANAGED BY PUPPET!
+###  Manual changes will be overwritten.
+###  See modules/mysql/templates/my.cnf.erb
 
 [mysqld]
 datadir=/var/lib/mysql
@@ -6,47 +8,41 @@ socket=/var/lib/mysql/mysql.sock
 user=mysql
 
 # Disabling symbolic-links is recommended to prevent assorted security risks
-symbolic-links=0
+symbolic-links=<%= @symbolic_links %>
 
 # Default to using old password format for compatibility with mysql 3.x
 # clients (those using the mysqlclient10 compatibility package).
 # This is on in pre-puppet production. Hopefully it is not needed anymore tho we may need to convert.
-# old_passwords=1
+old_passwords=<%= @old_passwords %>
 
 # I think a high value is necessary for dumps
-max_allowed_packet=32M
+max_allowed_packet=<%= @max_allowed_packet %>
 
 # This was added from a time when we used a very bad operating system
 # It's probably not needed anymore.
-# lower_case_table_names=1
+lower_case_table_names=<%= @lower_case_table_names %>
 
 ####################################
 # Some of these performance settings cause a slower
-# startup process.  Be patient and try not to
+# startup process. Be patient and try not to
 # bring it down during an important time.
 ####################################
 
 log-slow-queries # places log in data directory
-long_query_time=10 # 10 seconds
+long_query_time=<%= @long_query_time %> # 10 seconds
 
-innodb_buffer_pool_size=1000000000 #size in bytes, recommended very large
-key_buffer_size=200000000 #200MB for temp/myisam
+innodb_buffer_pool_size=<%= @innodb_buffer_pool_size %> #size in bytes, recommended very large
+key_buffer_size=<%= @key_buffer_size %> #200MB for temp/myisam
 
-query_cache_type=1 # queries will be cached if no sql_no_cache
-query_cache_size=200000000 # 300MB
+query_cache_type=<%= @query_cache_type %> # queries will be cached if no sql_no_cache
+query_cache_size=<%= @query_cache_size %> # 300MB
 
-table_cache=1000 # num_connections*num joins, number of open tables
-open_files_limit=3000 #max number of open files, supposed to be 3x table_cache
+table_cache=<%= @table_cache %> # num_connections*num joins, number of open tables
+open_files_limit=<%= @open_files_limit %> #max number of open files, supposed to be 3x table_cache
 
-tmp_table_size=200000000 #200MB
-max_heap_table_size=300000000 # 300MB
+tmp_table_size=<%= @tmp_table_size %> #200MB
+max_heap_table_size=<%= @max_heap_table_size %> # 300MB
 
-
-
-
-# Disabling symbolic-links is recommended to prevent assorted security risks;
-# to do so, uncomment this line:
-# symbolic-links=0
 
 [mysqld_safe]
 log-error=/var/log/mysqld.log
