--- a/piranha/templates/arptables.erb
+++ b/piranha/templates/arptables.erb
@@ -5,7 +5,7 @@
 :IN ACCEPT [1264:35392]
 :OUT ACCEPT [2:56]
 :FORWARD ACCEPT [0:0]
-<% [@virtual_ip].each_pair do |vip, values| -%>
+<% @virtual_ip.each_pair do |vip, values| -%>
 [0:0] -A IN -d <%= vip %> -j DROP
 [0:0] -A OUT -s <%= vip %> -j mangle --mangle-ip-s <%= @ipaddress %>
 <% end -%>
