signing=front in shibboleth applicationdefaults

--- a/shibboleth_server/templates/shibboleth2.xml.erb
+++ b/shibboleth_server/templates/shibboleth2.xml.erb
@@ -2,7 +2,7 @@
 <SPConfig xmlns="urn:mace:shibboleth:2.0:native:sp:config"
     xmlns:conf="urn:mace:shibboleth:2.0:native:sp:config"
     xmlns:saml="urn:oasis:names:tc:SAML:2.0:assertion"
-    xmlns:samlp="urn:oasis:names:tc:SAML:2.0:protocol"    
+    xmlns:samlp="urn:oasis:names:tc:SAML:2.0:protocol"
     xmlns:md="urn:oasis:names:tc:SAML:2.0:metadata"
     clockSkew="180">
 
@@ -12,7 +12,7 @@
     points into to this section (or to the defaults here).
     -->
     <ApplicationDefaults entityID="<%= entity %>"
-                         REMOTE_USER="WHOIS-ID KERBEROS-ID eppn persistent-id targeted-id">
+                         REMOTE_USER="WHOIS-ID KERBEROS-ID eppn persistent-id targeted-id" signing="front">
 
         <!--
         Controls session lifetimes, address checks, cookie handling, and the protocol handlers.
@@ -65,7 +65,7 @@
 
         <!-- Map to extract attributes from SAML assertions. -->
         <AttributeExtractor type="XML" validate="true" reloadChanges="false" path="attribute-map.xml"/>
-        
+
         <!-- Use a SAML query if no attributes are supplied during SSO. -->
         <AttributeResolver type="Query" subjectMatch="true"/>
 
@@ -83,7 +83,7 @@
         the https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPApplicationOverride topic).
         Resource requests are mapped by web server commands, or the RequestMapper, to an
         applicationId setting.
-        
+
         Example of a second application (for a second vhost) that has a different entityID.
         Resources on the vhost would map to an applicationId of "admin":
         -->
@@ -91,7 +91,7 @@
         <ApplicationOverride id="admin" entityID="https://admin.example.org/shibboleth"/>
         -->
     </ApplicationDefaults>
-    
+
     <!-- Policies that determine how to process and authenticate runtime messages. -->
     <SecurityPolicyProvider type="XML" validate="true" path="security-policy.xml"/>
 
