--- a/php/templates/php.ini.erb
+++ b/php/templates/php.ini.erb
@@ -635,9 +635,9 @@ html_errors = Off
 ; empty.
 ; http://www.php.net/manual/en/errorfunc.configuration.php#ini.error-log
 ; Example:
-;error_log = php_errors.log
+error_log = /var/log/php_error_log
 ; Log errors to syslog (Event Log on NT, not valid in Windows 95).
-;error_log = /var/log/php_error_log
+;error_log = syslog
 
 ;;;;;;;;;;;;;;;;;
 ; Data Handling ;
