--- a/auth/templates/etc/krb5.conf.erb
+++ b/auth/templates/etc/krb5.conf.erb
@@ -12,12 +12,12 @@
  dns_lookup_realm = false
  dns_lookup_kdc = false
  ticket_lifetime = <%= @ticket_lifetime %>
- forwardable = yes
 
 [realms]
 
  <%= @realm %> = {
-  kdc = <%= @kdc %>
+  kdc = <%= @kdc1 %>
+  kdc = <%= @kdc2 %>
  }
 
 [domain_realm]
