--- a/logstashforwarder/templates/etc/init.d/logstashforwarder.RedHat.erb
+++ b/logstashforwarder/templates/etc/init.d/logstashforwarder.RedHat.erb
@@ -1,158 +1,74 @@
-#! /bin/sh
-#
-#       /etc/rc.d/init.d/logstash
-#
-#       Starts Logstash as a daemon
-#
-# chkconfig: 2345 90 10
-# description: Starts Logstash as a daemon
+#!/bin/bash
+# chkconfig: 345 80 20
+# description: Logstash Forwarder
+# processname: logstash-forwarder
+# config: /etc/logstash-forwarder
+# pidfile: /var/run/logstash-forwarder.pid
 
-### BEGIN INIT INFO
-# Provides: logstash
-# Required-Start: $local_fs $remote_fs
-# Required-Stop: $local_fs $remote_fs
-# Default-Start: 2 3 4 5
-# Default-Stop: S 0 1 6
-# Short-Description: Logstash
-# Description: Starts Logstash as a daemon.
+PATH=/sbin:/usr/sbin:/bin:/usr/bin
+NAME=logstash-forwarder
+DAEMON=/opt/logstash-forwarder/bin/logstash-forwarder
+PIDFILE=/var/run/$NAME.pid
+SCRIPTNAME=/etc/init.d/$NAME
 
-### END INIT INFO
+[ -r /etc/default/$NAME ] && . /etc/default/$NAME
+. /etc/init.d/functions
 
-. /etc/rc.d/init.d/functions
+[ -e /etc/sysconfig/logstash-forwarder ] && . /etc/sysconfig/logstash-forwarder
+DAEMON_ARGS="${DAEMON_ARGS:--config /etc/logstash-forwarder.conf -spool-size 100 -log-to-syslog}"
 
-PATH=/bin:/usr/bin:/sbin:/usr/sbin
-NAME=logstash
-DESC="Logstash Daemon"
-DEFAULT=/etc/sysconfig/$NAME
-
-if [ `id -u` -ne 0 ]; then
-   echo "You need root privileges to run this script"
-   exit 1
-fi
-
-# The following variables can be overwritten in $DEFAULT
-
-export JAVA_HOME=/usr
-
-# Directory where the logstash all in one jar lives
-LS_HOME=/opt/logstash
-
-# Additional Java OPTS
-LS_JAVA_OPTS="-Xmx256m -Djava.io.tmpdir=$LS_HOME/tmp"
-
-# logstash log directory
-LOG_DIR=/var/log/logstash
-
-# logstash configuration directory
-CONF_DIR=/etc/logstash/conf.d
-
-# logstash log file
-LOG_FILE=$LOG_DIR/$NAME.log
-
-# Open File limit
-OPEN_FILES=2048
-
-# Nice level
-NICE=19
-
-# Filter threads
-FILTER_THREADS=1
-
-# End of variables that can be overwritten in $DEFAULT
-
-if [ -f "$DEFAULT" ]; then
-  . "$DEFAULT"
-fi
-
-# Define other required variables
-PID_FILE=/var/run/$NAME.pid
-
-JAVA=`which java`
-JAR="${LS_HOME}/logstash.jar"
-ARGS="${LS_JAVA_OPTS} -jar ${JAR} agent --config ${CONF_DIR} --log ${LOG_FILE} -w ${FILTER_THREADS}"
-
-is_true() {
-    if [ "x$1" = "xtrue" -o "x$1" = "xyes" -o "x$1" = "x1" ] ; then
-        return 0
-    else
-        return 1
-    fi
-}
-
-#
-# Function that starts the daemon/service
-#
-do_start()
+start()
 {
-
-  if ! is_true "$START" ; then
-    echo "logstash not configured to start, please edit $DEFAULT to enable"
-    exit 0
-  fi
-
-  if [ -z "$JAVA" ]; then
-    echo "no JDK found - $JAVA"
-    exit 1
-  fi
-
-  if ! test -e "${JAR}"; then
-    echo "Daemon $DAEMON doesn't exist"
-    exit 1
-  fi
-
-  if pidofproc -p "$PID_FILE" >/dev/null; then
-    failure
-    exit 99
-  fi
-
-  ulimit -n $OPEN_FILES
-
-  cd $LS_HOME
-  $JAVA $ARGS > /dev/null 1>&1 &
-
+  echo -n $"Starting $NAME: "
+  nohup $DAEMON $DAEMON_ARGS >/dev/null 2>&1 &
   RETVAL=$?
-  local PID=`pgrep -f "${DAEMON} ${ARGS}"`
-  echo $PID > $PID_FILE
-  success
+  PID=$!
+  echo $PID > $PIDFILE
+  echo
+  [ $RETVAL -eq 0 ] && touch /var/lock/subsys/$NAME
 }
 
-#
-# Function that stops the daemon/service
-#
-do_stop()
+stop()
 {
-    killproc -p $PID_FILE $DAEMON
-    RETVAL=$?
-    echo
-    [ $RETVAL = 0 ] && rm -f ${PID_FILE}
+  echo -n $"Stopping $NAME: "
+  killproc -p "$PIDFILE" $DAEMON
+  RETVAL=$?
+  [ -f "$PIDFILE" ] && rm -f "$PIDFILE"
+  echo
+  [ $RETVAL -eq 0 ] && rm -f /var/lock/subsys/$NAME
 }
+
+restart () {
+  stop
+  start
+}
+
+RETVAL=0
 
 case "$1" in
   start)
-    echo -n "Starting $DESC: "
-    do_start
-    touch /var/run/logstash/$NAME
+    status -p $PIDFILE $NAME >/dev/null
+    RET=$?
+    if [ $RET -ne 0 ];then
+      start
+    fi
     ;;
   stop)
-    echo -n "Stopping $DESC: "
-    do_stop
-    rm /var/run/logstash/$NAME
+    stop
     ;;
-  restart|reload)
-    echo -n "Restarting $DESC: "
-    do_stop
-    do_start
+  restart|reload|force-reload)
+    restart
+    ;;
+  condrestart)
+    [ -f /var/lock/subsys/$NAME ] && restart || :
     ;;
   status)
-    echo -n "$DESC"
-    status -p $PID_FILE
-    exit $?
+    status -p $PIDFILE $NAME
+    RETVAL=$?
     ;;
   *)
-    echo "Usage: $SCRIPTNAME {start|stop|status|restart}" >&2
-    exit 3
-    ;;
+    echo "Usage: $0 {start|stop|status|restart|reload|force-reload|condrestart}"
+    RETVAL=1
 esac
 
-echo
-exit 0
+exit $RETVAL
