--- a/rsyslog/templates/rsyslog.conf.erb
+++ b/rsyslog/templates/rsyslog.conf.erb
@@ -33,3 +33,5 @@ $IncludeConfig <%= scope.lookupvar('rsyslog::rsyslog_d') -%>*.conf
 # Emergencies are sent to everybody logged in.
 #
 *.emerg				*
+
+local0.* /var/log/drupal.log
