adds managed by puppet header

--- a/rvm/templates/passenger-apache.conf.erb
+++ b/rvm/templates/passenger-apache.conf.erb
@@ -1,3 +1,4 @@
+# Managed by Puppet
 <IfModule passenger_module>
   PassengerRoot <%= gempath %>/passenger-<%= version %>
   PassengerRuby <%= rvm_prefix %>rvm/wrappers/<%= ruby_version %>/ruby
