--- a/rvm/templates/passenger-apache-centos.conf.erb
+++ b/rvm/templates/passenger-apache-centos.conf.erb
@@ -1,22 +1,8 @@
 # Managed by Puppet 
 # modules/rvm/templates/passenger-apache-centos.conf.erb
 
-#LoadModule passenger_module <%= gempath %>/passenger-<%= version %>/ext/apache2/mod_passenger.so
+LoadModule passenger_module <%= gempath %>/passenger-<%= version %></buildout/apache2/mod_passenger.so
 
-#<IfModule passenger_module>
-#  PassengerRoot <%= gempath %>/passenger-<%= version %>
-#  PassengerRuby <%= rvm_prefix %>rvm/wrappers/<%= ruby_version %>/ruby
-#  PassengerMaxPoolSize <%= maxpoolsize %>
-#  PassengerPoolIdleTime <%= poolidletime %>
-#  PassengerMaxInstancesPerApp <%= maxinstancesperapp %>
-#<% if version >= '3.0.0' %>
-#  PassengerMinInstances <%= mininstances %>
-#  PassengerSpawnMethod <%= spawnmethod %>
-#<% end %>
-#</IfModule>
-
-
-LoadModule passenger_module <%=/gems/passenger-<%= version %></buildout/apache2/mod_passenger.so
 <IfModule mod_passenger.c>
   PassengerRoot <%= gempath %>/passenger-<%= version %>
   PassengerRuby <%= rvm_prefix %>rvm/wrappers/<%= ruby_version %>/ruby
