--- a/php/templates/php.ini.erb
+++ b/php/templates/php.ini.erb
@@ -416,7 +416,7 @@ disable_classes =
 ; be increased on systems where PHP opens many files to reflect the quantity of
 ; the file operations performed.
 ; http://www.php.net/manual/en/ini.core.php#ini.realpath-cache-size
-realpath_cache_size = 4M
+realpath_cache_size = 512K
 
 ; Duration of time, in seconds for which to cache realpath information for a given
 ; file or directory. For systems with rarely changing files, consider increasing this
